--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 @import url("https://fonts.cdnfonts.com/css/poppins");
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
