ch-#8: setup router and necessary routes setup

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,6 @@
     box-sizing: border-box;
     font-family: Poppins, sans-serif;
 }
+
+::-webkit-scrollbar{width:2px;border-left:1px solid ; height: 2px; }
+::-webkit-scrollbar-thumb{background-color:rgba(217, 217, 217, 0.26);}
