ft-#16: complete search page

--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,10 @@
 ::-webkit-scrollbar{width:2px;border-left:1px solid ; height: 2px; }
 ::-webkit-scrollbar-thumb{background-color:rgba(217, 217, 217, 0.26);}
 
-
+/* 
 .react {
-position: relative;
-}
+
+} */
 
 #root {
     position: absolute;
@@ -26,3 +26,4 @@ position: relative;
     height: 100vh;
     top: 0;
 }
+
