--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Poppins, sans-serif;
+    /* color: rgba(184, 183, 183, 0.651); */
 }
 
 ::-webkit-scrollbar{width:2px;border-left:1px solid ; height: 2px; }
