--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Poppins, sans-serif;
+    background-color: whitesmoke;
     /* color: rgba(184, 183, 183, 0.651); */
 }
 
